# django-ckeditor-5

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/: FUNDING.yml  release_drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint_python.yml  release-drafter.yml  release.yml  testpypi.yml
django_ckeditor_5/: __init__.py  apps.py  exceptions.py  exemple_server.py  fields.py  forms.py  index.html  models.py  package-lock.json  package.json  permissions.py  signals.py  storage_utils.py  urls.py  validators.py  views.py  webpack.config.js  webpack.example.js  widgets.py
django_ckeditor_5/migrations/: 0001_initial.py  0002_auto_20191226_0253.py
django_ckeditor_5/static/django_ckeditor_5/: app.js  exemple.js
django_ckeditor_5/static/django_ckeditor_5/src/: ckeditor.js  override-django.css
django_ckeditor_5/static/django_ckeditor_5/src/custom_plugins/: imageediting.js  imagetitle.js  imagewithtitle.js
django_ckeditor_5/static/django_ckeditor_5/src/custom_plugins/imagetitle/: imagetitlecommand.js  imagetitleediting.js  imagetitleui.js
django_ckeditor_5/static/django_ckeditor_5/src/custom_plugins/imagetitle/ui/: titleformview.js
django_ckeditor_5/static/django_ckeditor_5/src/custom_plugins/sign/: sign.css  sign.js  signcommand.js  signediting.js  signui.js
django_ckeditor_5/static/django_ckeditor_5/src/custom_plugins/theme/: titleform.css
django_ckeditor_5/templates/django_ckeditor_5/: widget.html
django_ckeditor_5/templatetags/: ckeditor.py
example/: pyproject.toml  requirements.txt
example/blog/: conftest.py  coverage.xml  django_ckeditor_5  manage.py  setup.cfg
example/blog/articles/: admin.py  forms.py  models.py  storage.py  urls.py  views.py
example/blog/articles/migrations/: 0001_initial.py  0002_article_title.py  0003_article_text2.py
example/blog/articles/templates/: base.html
example/blog/articles/templates/articles/: article_create.html  article_detail.html  article_list.html  dynamic_editor.html
example/blog/blog/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
example/blog/static_files/: custom.css
example/blog/tests/: .coverage  coverage.xml  test_clean_files.py  test_fields.py  test_forms.py  test_storage.py  test_upload_file.py  test_upload_file_permission.py  test_upload_image.py
