[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ckeditor-5"
description = "CKEditor 5 for Django."
keywords = ["CKEditor", "CKEditor5", "Django"]
license = {text = "BSD-3-Clause"}
readme = "README.rst"
requires-python = ">=3.7"
version = "0.2.0"

authors = [
    {"author" = "Vladislav Khoboko", "email" = "vladislah@gmail.com"},
]

classifiers = [
        "Environment :: Web Environment",
        "Framework :: Django",
        "Framework :: Django :: 2.2",
        "Framework :: Django :: 3.0",
        "Framework :: Django :: 4.0",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    ]

dependencies = [
  'Django >= 2.2',
  'Pillow',
]

[project.urls]
homepage = "https://pypi.org/project/django-ckeditor-5/"
repository = "https://github.com/hvlads/django-ckeditor-5"

[project.optional-dependencies]
dev = [
  'bandit == 1.7.4',
  'black == 22.8.0',
  'codespell == 2.2.1',
  'coverage == 6.3.3',
  'flake8 == 5.0.4',
  'flake8-2020 == 1.7.0',
  'flake8-bugbear == 22.8.22',
  'flake8-comprehensions == 3.10.0',
  'Flake8-pyproject == 1.1.0.post0',
  'isort == 5.10.1',
  'mypy == 0.971',
  'mypy-extensions == 0.4.3',
  'pylint == 2.15.0',
  'pytest == 7.1.2',
  'pytest-cov == 3.0.0',
  'pytest-django == 4.5.2',
  'pytest-mock == 3.7.0',
  'pyupgrade == 2.37.3',
  'safety == 2.1.1',
  'types-setuptools == 65.3.0',
  'typing_extensions == 4.1.1',
]

[tool.setuptools]
packages = ["django_ckeditor_5"]

[tool.bandit]
exclude_dirs = ["example/blog/env", ]
skips = ["B101", "B105", "B308", "B703"]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | venv
    | env
    | _build
    | buck-out
    | build
    | dist
    | django_ckeditor_5
    | migrations
  )/
)
'''

[tool.flake8]
count = true
exclude = '.git,__pycache__,docs/source/conf.py,old,build,dist,env'
ignore = ['B009', 'E302', 'F401', 'W292', 'W391']
max-complexity = 10
max-line-length = 140
per-file-ignores = [
    '__init__.py:F401',
]
show-source = true
statistics = true

[tool.isort]
profile = "black"
skip = ["env", "migrations", "build"]

[tool.mypy]
exclude = [
    'example/blog/articles/migrations',
    "build",
    "env",
    "example/blog/django_ckeditor_5"
]
ignore_missing_imports = true
install_types = true
